Removed check for if the user isDeleted on the save methods in the Account-relevant classes.